[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "retirement-calculator"
version = "0.1"
dependencies = [
    "click",
    "pydantic>=2.5",
    "requests",
    "requests-cache",
    "yarl"
]
requires-python = ">=3.11"
authors = [
    {name = "Jim Hart", email = "james.hart7816@gmail.com"}
]
description = "A CLI for calculating retirement needs"
readme = "README.md"

[project.scripts]
retirement-calculator = "retirement_calculator.cli:main"

[project.optional-dependencies]
test = [
    "pytest"
]
